--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pycparser==2.19
 PyDispatcher==2.0.5
 PyHamcrest==1.9.0
 pyOpenSSL==19.0.0
+pypinyin==0.35.4
 queuelib==1.5.0
 Scrapy==1.7.1
 service-identity==18.1.0
